Updated with JWT implementation

--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -7,7 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "Concepts": "data source=BNGLOG-L-99028;database=Concepts;Integrated Security=SSPI;persist security info=True;MultipleActiveResultSets=true"
+    "Concepts": "data source=DESKTOP-2Q1UQDQ\\SQLEXPRESS;database=AspNetCoreConcept;Integrated Security=SSPI;persist security info=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:44309",
+    "Secret": "this is my secret"
+  }
 }
